force-app/main/default/objects/PACS__c/PACS__c.object-meta.xml
<CustomObject>
    <label>PACS</label>
    <nameField>
        <displayFormat>PACS-{0000}</displayFormat>
        <label>PACS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PACS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>