force-app/main/default/objects/PACS__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PACS</relationshipLabel>
    <relationshipName>PACS</relationshipName>
    <type>Lookup</type>
</CustomField>