force-app/main/default/objects/PACS__c/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>