force-app/main/default/objects/PACS__c/fields/Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Connection_Type__c</fullName>
    <label>Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compass</fullName>
            </value>
            <value>
                <fullName>VPN</fullName>
            </value>
            <value>
                <fullName>Nuance</fullName>
            </value>
            <value>
                <fullName>LifeImage</fullName>
            </value>
            <value>
                <fullName>Ambra</fullName>
            </value>
            <value>
                <fullName>Nucleus</fullName>
            </value>
            <value>
                <fullName>IEP</fullName>
            </value>
            <value>
                <fullName>Citrix ShareFile</fullName>
            </value>
            <value>
                <fullName>Virtual Image Exchange (DataCard)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CDs</fullName>
            </value>
            <value>
                <fullName>FTP Assistance</fullName>
            </value>
            <value>
                <fullName>Facilities Gateway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>