force-app/main/default/objects/PACS__c/fields/Installed_By__c.field-meta.xml
<CustomField>
    <fullName>Installed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to contact record. Provide lookup to active and inactive contacts.</description>
    <label>Installed_By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PACS</relationshipLabel>
    <relationshipName>PACS</relationshipName>
    <type>Lookup</type>
</CustomField>