force-app/main/default/objects/PACS__c/fields/Institution_DICOM_TAG_New__c.field-meta.xml
<CustomField>
    <fullName>Institution_DICOM_TAG_New__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Institution (DICOM TAG)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>