force-app/main/default/objects/PACS__c/fields/Last_Date_Serviced__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Serviced__c</fullName>
    <description>If changes required to connection setup, enter date modified. Manually entered SFDC user. Need a different field name, so it doesn’t get confused with standard last modified date field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Date Serviced</label>
    <type>Date</type>
</CustomField>