force-app/main/default/objects/PACS__c/fields/LB_Version__c.field-meta.xml
<CustomField>
    <fullName>LB_Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LB Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>