force-app/main/default/objects/PACS__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>