force-app/main/default/objects/PACS__c/fields/Port__c.field-meta.xml
<CustomField>
    <fullName>Port__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Port #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>