force-app/main/default/objects/PACS__c/fields/PSK__c.field-meta.xml
<CustomField>
    <fullName>PSK__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PSK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>