force-app/main/default/objects/PACS__c/fields/Public_IP__c.field-meta.xml
<CustomField>
    <fullName>Public_IP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Public IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>