force-app/main/default/objects/PACS__c/fields/Referring_physician_DICOM_TAG__c.field-meta.xml
<CustomField>
    <fullName>Referring_physician_DICOM_TAG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referring physician (DICOM TAG)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>