force-app/main/default/objects/PACS__c/fields/Security_Privacy_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Security_Privacy_Agreement__c</fullName>
    <label>Security/Privacy Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>