force-app/main/default/objects/PACS__c/fields/VPN_ticket__c.field-meta.xml
<CustomField>
    <fullName>VPN_ticket__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VPN ticket #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>