force-app/main/default/objects/PACS__c/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workflow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>