force-app/main/default/objects/PACS__c/listViews/All_PACS.listView-meta.xml
<ListView>
    <fullName>All_PACS</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AE__c</columns>
    <columns>Connection_Type__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status_of_Site__c</columns>
    <filterScope>Everything</filterScope>
    <label>All PACS</label>
</ListView>